# rust-axum-tests

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.txt  docker-compose.dev.yml  docker-compose.yml
migrations/: 20260117000001_initial_setup.sql  README.md
src/: main.rs
src/database/: mod.rs
src/handlers/: mod.rs  product_handler.rs  user_handler.rs
src/models/: product.rs  user.rs
