[package]
name = "rust-axum-tests"
version = "1.0.0"
edition = "2021"
authors = ["Henrique Azank"]
description = "A microservice testing repository built with Axum framework and PostgreSQL"

[dependencies]
# Axum web framework
axum = "0.7"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Tower for middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
# Environment variables
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
